[#2650662] fix primary menu gap

--- a/agov/themes/agov/agov_base/sass/components/primary-navigation/_primary-navigation.scss
+++ b/agov/themes/agov/agov_base/sass/components/primary-navigation/_primary-navigation.scss
@@ -12,6 +12,8 @@
 
   // Level 1 list, list item and anchor.
   &__list {
+    margin-top: 0;
+    margin-bottom: 0;
     text-indent: 0;
     overflow: hidden;
     list-style-type: none;
